--- a/src/less/main.less
+++ b/src/less/main.less
@@ -9,12 +9,12 @@
   background-size: 100%;
   padding: @pad*11.5 0 calc(15vw - @pad*6); // NOTE: (x)vw - overlap by disaster block
   position: relative;
-  z-index: 1;
 }
 
 .main__layout {
   .layout();
   position: relative;
+  z-index: 2;
 }
 
 .main__header {
